--- a/CSS/header.css
+++ b/CSS/header.css
@@ -163,7 +163,7 @@ nav {
         }
     }
 
-    ul {
+    .nav-links {
         list-style: none;
         display: flex;
         flex-direction: row;
@@ -214,6 +214,107 @@ nav {
                 font-size: 27px;
             }
         }
+    }
+
+    .menu-icon {
+        display: none;
+        z-index: 9999;
+        margin-right: -30px;
+
+        font-size: 30px;
+        
+        cursor: pointer;
+    }
+
+}
+
+@media screen and (max-width: 1200px) {
+
+
+    nav {
+
+        .menu-icon {
+            display: block;
+            z-index: 9999;
+        }
+
+        .searchbar-header {    
+            margin-top: 15px;
+            width: 200px;
+            margin-bottom: 50px;
+    
+            .searchbar-header-content {
+    
+                i {
+                    background-color: white;
+                    height: 27px;
+                    width: 27px;
+                }
+            }
+    
+            input {
+                width: 173px;    
+            }
+    
+            .search-results {
+                width: 209px;
+                max-height: 500px;
+            }
+    
+        }
+
+
+    .nav-links {
+        display: block;
+        position: fixed;
+
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+
+
+        top: 0;
+        margin-top: -10px;
+        padding-top: 100px;
+
+        right: -100%;
+        width: 250px; 
+        height: 100vh;
+        
+        background-color: #d5eac7;
+        background-size: 40%;        
+        box-shadow: 2px 2px 10px 2px rgba(1, 56, 10, 0.485);
+        backdrop-filter: blur(70px);
+
+        transition: right 0.3s ease; 
+        z-index: 999;
+
+        li {
+
+            align-items: flex-start;
+            justify-content: flex-start;
+            text-align: left;
+
+            font-size: 19px;
+    
+            a {
+                width: 250px;
+                padding-left: 0px;
+            }
+    
+            .head-link1, .head-link2, .head-link3, .head-link4, .head-link5 {
+                display: block;
+            }
+    
+            .head-icon1, .head-icon2,.head-icon3,.head-icon4,.head-icon5 {
+                display: none;
+            }
+        }
+    }
+    .nav-links.active {
+        right: 0; 
+    }
+
     }
 
 }
