--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -396,9 +396,11 @@ body::before, body::after {
                     padding: 0px;
 
                     height: 645px;
+                    transition: transform 0.4s ease;
                 }
     
                 img {
+                    transition: transform 0.4s ease-in-out;
                     width: 100%;
                     min-width: 100%;
                     height: 645px;
@@ -427,7 +429,7 @@ body::before, body::after {
 
                     border-radius: 15px 5px 5px 15px;
                     border: solid 1px #162D06;
-                    
+
                     font-size: clamp(10px, 2vw, 15px); 
 
                 }
@@ -508,7 +510,7 @@ body::before, body::after {
         
         .un-scroll-content {
             transform: translateX(100%); 
-            transition: transform 0.4s ease;
+            transition: transform 0.3s ease-in-out;
 
             width: 205px;
             min-width: 205px;
@@ -544,6 +546,7 @@ body::before, body::after {
                 .media-container {
     
                     .image-preview {
+                        transition: transform 0.4s ease-in-out;
                         width: 140%;
                     }
                 }
