--- a/CSS/Admin/admin-create.css
+++ b/CSS/Admin/admin-create.css
@@ -1,7 +1,7 @@
 body {
     background-color: #F2FFEA;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -10,12 +10,15 @@ body {
 
     color: #162D06;
 }
+
+
 .welcome-logo {
 
     background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-    background-size: 22%;
+    background-size: 15%;
     width: 100%;
     height: 100vh;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,29 +28,40 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        width: 65%;
     }
 
     .framed-logo {
+
+        width: 100%;
 
         .logo-inside-frame {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            padding: 0;
+            margin: 0;
 
             background-color: #F7FFF2;
-            width: 125vh;
+            width: 100%;
+            padding-left: 7%;
+            padding-right: 7%;
             height: 100vh;
 
             .inside {
-                width: 100vh;
+                width: 100%;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
+                gap: 7%;
 
                 .inside-left {
                     display: flex;
                     flex-direction: column;
+
+                    width: 45%;
 
                     .gobackbutton {
                         width: 250px;
@@ -98,8 +112,10 @@ body {
                     flex-direction: column;
                     justify-content: space-between;
 
+                    width: 45%;
+
                     .postnewblog {
-                        width: 200px;
+                        width: 45%;
                     }
                 }
             }
@@ -109,10 +125,10 @@ body {
 
 }
 
-
 .main-title, .snd-title, .blog-p, .blog-tags, .picture-upload, .picture-alt {
-    font-size: 20px;
+    font-size: clamp(17px, calc(1vw + 0.9vh), 20px);          
     margin-top: 50px;
+    width: 100%;
 
     font-family: "Libre Bodoni", serif;
     
@@ -123,19 +139,26 @@ body {
     flex-direction: column;
     gap: 15px;
 
+    width: 100%;
+
     input {
         border-radius: 5px;
         border: solid 1px #162D06;
         height: 25px;
 
+        font-size: clamp(9px, calc(1vw + 0.9vh), 17px);          
+
         font-family: "Libre Bodoni", serif;
 
         padding-left: 5px;
+
+        width: 100%;
     }
 }
 
 .blog-p-box #blogText {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: 400px;
 
     border-radius: 5px;
@@ -175,47 +198,113 @@ body {
     }
 }
 
-@media (max-width: 1100px){
 
-    .main-content {
+@media (max-width: 900px) {
+
+    body {
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+
+    .welcome-logo {
+
+        width: 100%;
+        height: 100%;
+    
+        .framed-logo {
+    
+    
+            .logo-inside-frame {
+
+                padding-bottom: 100px;
+                padding-top: 150px;
+
+                .inside {
+
+                    flex-wrap: wrap;
+                    flex-direction: column;
+                    gap: 0px;
+
+                    .inside-left {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 0px;
+                        margin-top: 0px;
+                        margin-bottom: 0px;
+    
+                        width: 100%;
+    
+                        .gobackbutton {
+                            width: 250px;
         
-        .un-scroll-content {
-            transform: translateX(100%); 
-            transition: transform 0.4s ease;
-            width: 250px;
-            z-index: 998;
-        }
-
-        .un-scroll-content-active {
-            transform: translateX(0%); 
-            transition: transform 0.4s ease;
-            width: 205px;
-        }
-
-        .toggle-icon {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            right: 0px;
-
-            transition: right 0.1s ease;
-        }
-    
-        .scroll-content {
-    
-            .newly-posted-container {
+                            a {
+                                padding: 7px;
+                                padding-right: 10px; 
+                                padding-left: 10px;
+                                background-color: #F39994;
+                                border-radius: 25px;
         
-                .next-right-newly {
-                    right: 2.5%;
-                }
+                                color: #162D06;
+                                text-decoration: none;
+                                font-weight: bold;
+        
+                                font-size: 14px;
+                                font-family: "Libre Bodoni", serif;
+        
+                                i {
+                                    display: none;
+                                    margin-right: 7px;
+                                    font-size: 13px;
+                                }
+                            }
+        
+                            &:hover {
+                                a {
+                                    transform: scale(1.2);
+                                    transition: 0.15s;
+        
+                                    background-color: #a5eb77;
+        
+                                    background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                                    background-size: 200%;
+        
+                                    color: white;
+                                } 
+        
+                                i {
+                                    display: inline;
+                                }
+                            }
+                        }
+                    }
+
+                    .inside-right {
+
+                        width: 100%;
     
-                .next-left-newly {
-                    left: 2.5%;
+                        .postnewblog {
+                            margin-top: 25px;
+                        }
+                    }
+
                 }
-    
+        
             }
-
         }
     
+    }
+
+    .main-title-box, .snd-title-box, .blog-p-box, .blog-tags-box, .picture-upload-box, .picture-alt-box {
+        gap: 5px;
+    }
+
+    .main-title-box, .snd-title-box, .blog-p-box, .blog-tags-box, .picture-upload-box, .picture-alt-box {
+        gap: 5px;
+    }
+
+    .blog-p-box #blogText {
+        width: 100%;
+        max-width: 500px;
+        height: 250px;
     }
 }
