--- a/CSS/error.css
+++ b/CSS/error.css
@@ -32,6 +32,7 @@ body::before, body::after {
 
 main {
     height: 100%;
+    margin-bottom: 25%;
 
     .error-section {
 
@@ -58,40 +59,37 @@ main {
         display: flex;
         justify-content: center;
 
-        li {
-            list-style: none;
-            width: 100%;
+        list-style: none;
+        width: 100%;
 
-            display: flex;
-            flex-direction: row;
-            gap: 25px;
-            flex-wrap: wrap;
+        flex-direction: row;
+        gap: 25px;
+        flex-wrap: wrap;
 
-            a {
-                padding: 7px;
-                padding-right: 10px; 
-                padding-left: 10px;
-                background-color: #F39994;
-                border-radius: 25px;
+        a {
+            padding: 7px;
+            padding-right: 10px; 
+            padding-left: 10px;
+            background-color: #F39994;
+            border-radius: 25px;
 
-                color: #162D06;
-                text-decoration: none;
-                font-weight: bold;
+            color: #162D06;
+            text-decoration: none;
+            font-weight: bold;
 
-                font-size: 14px;
-                font-family: "Libre Bodoni", serif;
+            font-size: 14px;
+            font-family: "Libre Bodoni", serif;
 
-                &:hover {
-                    transform: scale(1.2);
-                    transition: 0.25s;
+            &:hover {
+                transform: scale(1.2);
+                transition: 0.25s;
 
-                    background-color: #a5eb77;
+                background-color: #a5eb77;
 
-                    background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-                    background-size: 200%;
+                background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                background-size: 200%;
 
-                    color: white;
-                }
+                color: white;
             }
         }
     }
