--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap');
 
-
 header {
-
     background-color: rgba(255, 255, 255, 0.244);
     box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
     backdrop-filter: blur(20px);
@@ -15,17 +13,13 @@ header {
 }
 
 nav {
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
     margin-left: 7%;
     margin-right: 7%;
-
-    font-family: "libre Bodoni", serif;
-
+    font-family: "Libre Bodoni", serif;
     font-size: clamp(13px, 2.5vw, 15px);
 
     .nav-links-top {
@@ -34,9 +28,8 @@ nav {
         justify-content: center;
         align-items: center;
     }
-    
-    .searchbar-header {
 
+    .searchbar-header {
         position: relative;
         display: flex;
         flex-direction: column;
@@ -45,12 +38,10 @@ nav {
         text-align: left;
         margin-right: 20px;
         margin-top: 15px;
-
         width: 345px;
         height: 25px;
         border-radius: 25px;
         box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
-
 
         .searchbar-header-content {
             display: flex;
@@ -60,11 +51,9 @@ nav {
                 background-color: white;
                 height: 27px;
                 width: 35px;
-
                 display: flex;
                 justify-content: center;
                 align-items: center;
-
                 border-radius: 0px 25px 25px 0px;
                 z-index: 800;
                 margin-left: -0.5px;
@@ -79,7 +68,6 @@ nav {
             border: hidden;
             height: 25px;
             z-index: 800;
-
         }
 
         .search-results {
@@ -89,34 +77,28 @@ nav {
             padding-top: 20px;
             width: 356px;
             max-height: 310px;
-
             overflow-y: scroll;
             position: absolute;
-
             top: 100%;
             margin-top: -20px;
             margin-left: -5px;
-
             left: 0;
             z-index: 99;
             box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
-
             font-family: "Libre Bodoni", serif;
         }
 
         ::-webkit-scrollbar {
             background-color: #d5eac7;
-
             border-radius: 0px 99px 10px 0px;
             width: 10px;
         }
 
         ::-webkit-scrollbar-thumb {
             background-color: #162D06;
-
             border-radius: 99px;
         }
-        
+
         .search-results h2 {
             color: #162D06;
             font-size: 12px;
@@ -125,34 +107,28 @@ nav {
             overflow: hidden;
             text-overflow: ellipsis;
             height: 30px;
-
             display: flex;
             align-items: center;
         }
-        
+
         .search-results h2:hover {
             background-color: pink;
             cursor: pointer;
-
         }
-        
+
         #searchInputHeader::placeholder {
             padding-left: 5px;
             color: #162D06;
             font-size: 13px;
         }
-        
+
         #searchInputHeader {
             color: #162D06;
             padding-left: 5px;
-
             font-family: "Libre Bodoni", serif;
-
             border: none;
             outline: none;
-
         }
-
     }
 
     a {
@@ -176,12 +152,10 @@ nav {
         display: flex;
         flex-direction: row;
         text-align: center;
-
         height: 55px;
     }
 
     li {
-
         display: flex;
         align-items: center;
         justify-content: center;
@@ -191,11 +165,19 @@ nav {
             padding: 20px;
         }
 
-        .head-link1, .head-link2, .head-link3, .head-link4, .head-link5 {
+        .head-link1,
+        .head-link2,
+        .head-link3,
+        .head-link4,
+        .head-link5 {
             display: block;
         }
 
-        .head-icon1, .head-icon2,.head-icon3,.head-icon4,.head-icon5 {
+        .head-icon1,
+        .head-icon2,
+        .head-icon3,
+        .head-icon4,
+        .head-icon5 {
             display: none;
 
             i {
@@ -205,16 +187,22 @@ nav {
     }
 
     li:hover {
-
         transition: 0.25s;
 
-        .head-link1, .head-link2, .head-link3, .head-link4, .head-link5 {
+        .head-link1,
+        .head-link2,
+        .head-link3,
+        .head-link4,
+        .head-link5 {
             display: none;
             transition: 0.25s;
         }
 
-        .head-icon1, .head-icon2,.head-icon3,.head-icon4,.head-icon5 {
-
+        .head-icon1,
+        .head-icon2,
+        .head-icon3,
+        .head-icon4,
+        .head-icon5 {
             transition: 0.25s;
             display: block;
 
@@ -228,12 +216,9 @@ nav {
         display: none;
         z-index: 9999;
         margin-right: -30px;
-
         font-size: 30px;
-        
         cursor: pointer;
     }
-
 }
 
 @media screen and (max-width: 1400px) {
